fix sub-footer wrap

--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -7338,6 +7338,17 @@ label.panel-block {
         color: #dbdbdb; }
       .sub-footer .sub-footer-content .button.is-text:nth-child(1) {
         padding-left: 0; }
+    @media screen and (max-width: 768px) {
+      .sub-footer .sub-footer-content {
+        -webkit-box-orient: vertical !important;
+        -webkit-box-direction: normal !important;
+        -ms-flex-direction: column !important;
+        flex-direction: column !important; }
+        .sub-footer .sub-footer-content .button {
+          -webkit-box-pack: start !important;
+          -ms-flex-pack: start !important;
+          justify-content: flex-start !important;
+          padding-left: 1rem !important; } }
 
 .home_hero .title {
   margin-bottom: 2rem; }
