--- a/src/bulma/sass/layout/footer.sass
+++ b/src/bulma/sass/layout/footer.sass
@@ -50,3 +50,8 @@ $footer-background-color: $background !default
 				color: $grey-lighter
 			&:nth-child(1)
 				padding-left: 0
+		+mobile
+			flex-direction: column !important
+			.button
+				justify-content: flex-start !important
+				padding-left: 1rem !important
